--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -122,7 +122,7 @@ hi=(guysfish$conf.int[2]/(guysfish$conf.int[2] +1))
 options(digits=2)
 ```
 
-## ## Effectiveness Confidence Interval `r low`  to `r hi`
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 
 
@@ -189,7 +189,7 @@ hi=(galsfish$conf.int[2]/(galsfish$conf.int[2] +1))
 options(digits=2)
 ```
 
-## ## Effectiveness Confidence Interval `r low`  to `r hi`
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 
 # Gay sexual orintation 
@@ -255,7 +255,7 @@ hi=(LGBTQfish$conf.int[2]/(LGBTQfish$conf.int[2] +1))
 options(digits=2)
 ```
 
-## ## Effectiveness Confidence Interval `r low`  to `r hi`
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 # People that are drugUsers
 
@@ -320,7 +320,7 @@ hi=(yesfish$conf.int[2]/(yesfish$conf.int[2] +1))
 options(digits=2)
 ```
 
-## ## Effectiveness Confidence Interval `r low`  to `r hi`
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 # Discussions and Conclusions 
 
